Bug 143688 - Unable to detach sub-toolbars like Basic shapes
Summary: Unable to detach sub-toolbars like Basic shapes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Heiko Tietze
URL:
Whiteboard: target:7.5.0 target:7.4.0.2
Keywords: bibisected, bisected, regression
: 145196 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-02 10:02 UTC by Buovjaga
Modified: 2023-02-23 14:40 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2021-08-02 10:02:42 UTC
1. Open Writer
2. Click the triangle next to Basic shapes toolbar button

We used to be able to drag the sub-toolbar off. Unlocking toolbar has no effect.

Seen on Win & Linux

Regression from https://git.libreoffice.org/core/commit/086fa727cabf46eacfec1a0fd4f6dfe916aa2f04
Resolves tdf#131817 - Option to globally switch toolbar locking on/off

Adding Cc: to Heiko Tietze
Comment 1 V Stuart Foote 2021-08-02 13:04:58 UTC
Still is functioning in

Version: 7.1.5.2 (x64) / LibreOffice Community
Build ID: 85f04e9f809797b8199d13c421bd8a2b025d52b5
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

but confirm the split button dialog can no longer be detached on recent masters.
Comment 2 Buovjaga 2021-08-03 12:25:57 UTC
The same commit causes bug 131441 to reappear (undock active even with locked toolbars).
Comment 3 Buovjaga 2021-08-03 12:38:38 UTC
*** Bug 143704 has been marked as a duplicate of this bug. ***
Comment 4 Buovjaga 2021-08-03 13:54:17 UTC Comment hidden (obsolete)
Comment 5 Heiko Tietze 2021-08-19 08:12:40 UTC
Confirming for gen/gtk3/kf5. View > Toolbars > Lock Toolbars on/off affects these "sub-toolbars" too. But we still want these widgets to float.
Comment 6 Regina Henschel 2021-10-19 11:43:31 UTC
*** Bug 145196 has been marked as a duplicate of this bug. ***
Comment 7 Regina Henschel 2021-10-19 16:17:31 UTC
The problem has been introduced between version 7.2.0.0_alpha1 (31.May 2021) and 7.2.0.1_beta1 (17.Jun 2021). It is related to the new uno command .uno:ToolbarLock. You can customize your LibreOffice, e.g. menu Tools or View, to include it. You find it by searching for 'Lock'. It has the tooltip 'Lock or unlock all toolbars'.

As default this has the state 'Locked'. If you click it, all toolbars will become unlocked. That affects not only the main toolbars themselves but also their sub-toolbars. You can then drag the sub-toolbars again to make them floating.

If you unlock a single toolbar using its context menu, that will not unlock its sub-toolbars. You need to use the global command at least once.

I consider at least the fact, that unlocking an individual toolbar does not unlock its sub-toolbars as bug.

A different question is, whether the sub-toolbars should be affected by the lock of its parent toolbar at all or be always floatable.
Comment 8 sdc.blanco 2022-06-30 13:03:48 UTC
(In reply to Regina Henschel from comment #7)
> should sub-toolbars be affected by the lock of its parent toolbar at all
> or be always floatable.
Always floatable.
Comment 9 Heiko Tietze 2022-07-13 08:20:03 UTC
Maxim, do you have an idea how to solve this issue?
Comment 10 Maxim Monastirsky 2022-07-13 11:56:31 UTC
(In reply to Heiko Tietze from comment #9)
> Maxim, do you have an idea how to solve this issue?
Take a look at ImplDockingWindowWrapper::StartPopupMode( ToolBox* ..., there is a check for ToolBox::AlwaysLocked() which controls this. You can probably remove this check to make them always floatable. Or if we want to follow the parent toolbar, you can try to replace that check with vcl::Window::GetDockingManager()->IsLocked(pParentToolBox), or if the parent is in popup mode (might be the case for the overflow popup), same check for the parent of the parent.
Comment 11 Heiko Tietze 2022-07-15 09:21:43 UTC Comment hidden (obsolete)
Comment 12 Heiko Tietze 2022-07-15 09:37:28 UTC Comment hidden (off-topic)
Comment 13 Commit Notification 2022-07-17 20:52:03 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/db26f712e1edfef6b61a324b146310be00aeb100

Resolves tdf#143688 - Allow detaching of sub-toolbars when locked

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2022-07-25 08:38:15 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/7edadf64047b367f8d9cc0031008d6c6b46a55fd

Resolves tdf#143688 - Allow detaching of sub-toolbars when locked

It will be available in 7.4.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 stragu 2022-07-28 09:49:03 UTC
Verified as fixed in:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 7ba40c7d62c7c15f9c0e9cbc21b48f105454b885
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

On Ubuntu 20.04