Resolves tdf#143688 - Allow detaching of sub-toolbars when locked

Change-Id: I36669d953eb9438df73256676e2dfbfe3c263031
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137100
Tested-by: Jenkins
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>
(cherry picked from commit db26f712e1edfef6b61a324b146310be00aeb100)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137174
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>